--- a/templates/domestic/question_detail.html
+++ b/templates/domestic/question_detail.html
@@ -41,25 +41,50 @@
                 <button onclick="canIAnswer('{{ is_authenticated }}','{{ is_enrolled }}')">답변 달기</button>
             </div>
             {% for comment in comments %}
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <h5>{{ comment.comment_author.nickname }}</h5> 
-                        {{ comment.comment_content }}
-                    </div>
-                    <div>
-                        {{ comment.created_at }}
-                        {% if comment.comment_author == user %}
-                            <button onclick="location.href='{% url "domestic:comment_edit" domestic.pk comment.pk %}'"> 수정  </button>
-                            <button onclick="location.href='{% url "domestic:comment_delete" domestic.pk comment.pk %}'"> 삭제</button>
+            <div class="d-flex justify-content-between">
+                <div>
+                    <h5>{{ comment.comment_author.nickname }}</h5> 
+                    {{ comment.comment_content }}
+                </div>
+                <div>
+                    {{ comment.created_at }}
+                    {% if comment.comment_author == user %}
+                    <button onclick="location.href='{% url "domestic:comment_edit" domestic.pk comment.pk%}'"> 수정  </button>
+                    <form action="{% url "domestic:comment_delete" domestic.pk comment.pk %}" method="post" style="  display: inline; background: transparent">
+                        {% csrf_token %}
+                        <input type="submit" value="삭제" >
+                    </form>
+                    {% endif %}
+                    <button id='undercomment' onclick="commentPlus('{{comment.pk}}')">댓글</button><br/>
+                </div>
+            </div>
+            <div class="undercomment_list_{{ comment.pk }}">
+                {% for undercomment in undercomments  %}
+                    {% if undercomment.comment == comment %}
+                    <div class="d-flex justify-content-between" id="undercomment_{{ undercomment.pk }}">
+                        <div>
+                            <span>👉 {{ undercomment.comment_author.nickname }}</span>
+                            <span style="margin-left: 30px;">{{ undercomment.comment_content }}</span>
+                        </div>
+                        {% if undercomment.comment_author == request.user %}
+                        <div>
+                            <button onclick="editComment('{{ comment.pk }}', '{{ undercomment.pk }}','{{ undercomment.comment_content }}')">수정</button>
+                            <button onclick="onClickDeleteUnder('{{ undercomment.pk }}')">삭제</button>
+                        </div>
                         {% endif %}
                     </div>
-                </div>
-            {% endfor %}
+                    {% endif %}
+                {% endfor %}
+            </div>
+            <div class="undercomment_{{ comment.pk }}"></div>
+
+        {% endfor %}
             </div>
     </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
-    
     const canIPost = (is_authenticated, is_enrolled)=> {
         if (is_authenticated == 'False') {
             alert('로그인이 필요한 서비스입니다.');
@@ -86,6 +111,111 @@
         }
     };
     
+ //대댓글 생성
+
+    const commentPlus = (comment_id) => {
+        const element = document.querySelector(`.undercomment_${comment_id}`);
+        const originHTML = element.innerHTML;
+            
+        element.innerHTML = `
+            <input type="text" id="new-undercomment" placeholder="댓글을 입력해주세요." class="w-75"/>
+            <button class="btn btn-sm btn-outline-dark" onclick="onClickUnderComment('{{is_authenticated}}', ${comment_id}, document.querySelector('#new-undercomment').value)">확인</button>
+        `
+        }
+        
+        const onClickUnderComment= async(is_authenticated, comment_id, comment_content) => {  
+            if (is_authenticated == 'False') {
+                    alert('로그인이 필요한 서비스입니다.');
+                    window.location.href='{% url "login:login" %}';
+            } else {
+            const url = './undercomment_create/';
+            const {data} = await axios.post(url, {
+                comment_id,
+                comment_content,
+            });
+            underCommentHandleResponse(data.comment_id, data.undercomment_id, data.undercomment_author, data.undercomment_content);
+            }
+        };
+        const underCommentHandleResponse = (comment_id, undercomment_id, undercomment_author, undercomment_content) => {
+                const element = document.querySelector(`.undercomment_list_${comment_id}`);
+                const newDiv = document.createElement('div')
+                newDiv.className = "d-flex justify-content-between";
+                newDiv.id = `undercomment_${undercomment_id}`
+                
+                newDiv.innerHTML = `
+                <div>
+                    <span>👉 ${undercomment_author}</span>
+                    <span style="margin-left: 30px;">${undercomment_content}</span>
+                </div>
+                <div>
+                    <button onclick="editComment('${comment_id}', '${undercomment_id}','${undercomment_content}')">수정</button>
+                    <button onclick="onClickDeleteUnder('${undercomment_id}')">삭제</button>
+                </div>
+                `
+                element.appendChild(newDiv)
+                const input_content = document.querySelector(`.undercomment_${comment_id}`);
+                input_content.innerHTML = '';
+            };
+            
+            //대댓글 수정
+        const editComment = (comment_id, undercomment_id, undercomment_content) => {
+        const element = document.querySelector(`.undercomment_${comment_id}`);
+        const originHTML = element.innerHTML;
+            
+        element.innerHTML = `
+            <input type="text" id="edit-undercomment" value=${undercomment_content} class="w-75"/>
+            <button class="btn btn-sm btn-outline-dark" onclick="onClickEditUnder('${comment_id}', '${undercomment_id}', document.querySelector('#edit-undercomment').value)">수정</button>
+        `
+    }
+
+    const onClickEditUnder= async(comment_id, undercomment_id, comment_content) => {  
+        const url = './undercomment_update/';
+        const {data} = await axios.post(url, {
+            comment_id,
+            undercomment_id,
+            comment_content,
+        });
+        underEditHandleResponse(data.comment_id, data.undercomment_id, data.undercomment_author, data.undercomment_content);
+        
+    };
+
+    const underEditHandleResponse = (comment_id, undercomment_id, undercomment_author, undercomment_content) => {
+        const element = document.querySelector(`#undercomment_${undercomment_id}`);
+        const originHTML = element.innerHTML;
+
+        element.innerHTML = `
+        <div>
+            <span>👉 ${undercomment_author}</span>
+            <span style="margin-left: 30px;">${undercomment_content}</span>
+        </div>
+        <div>
+            <button onclick="editComment('${comment_id}', '${undercomment_id}','${undercomment_content}')">수정</button>
+            <button onclick="onClickDeleteUnder('${undercomment_id}')">삭제</button>
+        </div>
+        `
+        const editInput = document.querySelector(`.undercomment_${comment_id}`);
+        editInput.innerHTML = '';
+    };
+
+   // 대댓글 삭제
+
+    const onClickDeleteUnder= async(undercomment_id) => {
+        const allowance =  confirm('정말로 삭제하시겠습니까?');
+        if (allowance == true) {
+            const url = './undercomment_delete/';
+        const {data} = await axios.post(url, {
+            undercomment_id,
+        });
+        underDeleteHandleResponse(data.undercomment_id);
+        }
+    };
+
+    const underDeleteHandleResponse = (undercomment_id) => {
+        const element = document.querySelector(`#undercomment_${undercomment_id}`);
+
+        element.innerHTML = ``;
+    };
+
 </script>
 {% endblock %}
 {% block extra %}
@@ -101,9 +231,11 @@
             alert("작성자 본인만 글을 수정할 수 있습니다.");
         </script>
     {% endif %}
+
     {% if c_verification_error %}
         <script>
             alert("작성자 본인만 댓글을 수정할 수 있습니다.");
         </script>
     {% endif %}
+
 {% endblock %}
