--- a/templates/domestic/question_detail.html
+++ b/templates/domestic/question_detail.html
@@ -27,9 +27,9 @@
             </p>
             <div class="d-flex justify-content-end">
                 {% if question.author == user %}
-                    <form action='{% url "domestic:question_delete" domestic.pk question.pk %}' method="post" style="  display: inline; background: transparent">
+                    <form action='{% url "domestic:question_delete" domestic.pk question.pk %}' method="post" >
                         {% csrf_token %}
-                        <input type="submit" value="삭제" >
+                        <button onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
                     </form>
                     <button onclick="location.href='{% url "domestic:question_edit" domestic.pk question.pk %}'"> 수정 </button>
                 {% endif %}
