--- a/templates/domestic/question_detail.html
+++ b/templates/domestic/question_detail.html
@@ -46,13 +46,13 @@
                     <h5>{{ comment.comment_author.nickname }}</h5> 
                     {{ comment.comment_content }}
                 </div>
-                <div>
+                <div class="d-flex align-items-center">
                     {{ comment.created_at }}
                     {% if comment.comment_author == user %}
                     <button onclick="location.href='{% url "domestic:comment_edit" domestic.pk comment.pk%}'"> 수정  </button>
-                    <form action="{% url "domestic:comment_delete" domestic.pk comment.pk %}" method="post" style="  display: inline; background: transparent">
+                    <form action="{% url "domestic:comment_delete" domestic.pk comment.pk %}" method="post">
                         {% csrf_token %}
-                        <input type="submit" value="삭제" >
+                        <button onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
                     </form>
                     {% endif %}
                     <button id='undercomment' onclick="commentPlus('{{comment.pk}}')">댓글</button><br/>
