--- a/templates/domestic/comment_form.html
+++ b/templates/domestic/comment_form.html
@@ -73,7 +73,7 @@
             <form action ="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{form.as_p}}
-                <input type="submit" value="저장하기"/>
+                <input onclick="return alert('수정이 완료되었습니다.')"  type="submit" value="저장하기"/>
                 <a href="{% url 'domestic:question_detail' domestic.pk question.pk %}" class="btn btn-primary btn-sm">취소</a>
             </form>
             </div>
