--- a/templates/foreign/question_detail.html
+++ b/templates/foreign/question_detail.html
@@ -22,9 +22,9 @@
             </p>
             <div class="d-flex justify-content-end">
                 {% if question.author.pk == user.pk %}
-                <form action="{% url "foreign:question_delete" univ.pk question.pk %}" method="post" style="  display: inline; background: transparent">
+                <form action="{% url "foreign:question_delete" univ.pk question.pk %}" method="post" >
                     {% csrf_token %}
-                    <input type="submit" value="삭제" >
+                    <button onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
                 </form>
                 <button onclick="location.href='{% url "foreign:question_edit" univ.pk question.pk %}'"> 수정 </button>
                 {% endif %}
@@ -46,9 +46,9 @@
                         {{ comment.created_at }}
                         {% if comment.comment_author == user %}
                         <button onclick="location.href='{% url "foreign:q_comment_edit" univ.pk comment.pk%}'"> 수정  </button>
-                        <form action="{% url "foreign:q_comment_delete" univ.pk comment.pk %}" method="post" style="  display: inline; background: transparent">
+                        <form action="{% url "foreign:q_comment_delete" univ.pk comment.pk %}" method="post" style="display:inline;" >
                             {% csrf_token %}
-                            <input type="submit" value="삭제" >
+                            <button onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
                         </form>
                         {% endif %}
                         <button id='undercomment' onclick="commentPlus('{{comment.pk}}')">댓글</button><br/>
