--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -20,9 +20,9 @@
     {% endif %}
     {{review.content}}</p>
 {% if IsReviewAuthor %}
-<form action="{% url "foreign:review_delete" univ.pk review.pk %}" method="post" style="  display: inline; background: transparent">
+<form action="{% url "foreign:review_delete" univ.pk review.pk %}" method="post" class="ReviewDeleteForm" style="  display: inline; background: transparent">
     {% csrf_token %}
-    <input type="submit" value="삭제" >
+    <button onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
 </form>
 <a href="{% url "foreign:review_update" univ.pk review.pk%}">수정</a>
 {% endif %}
