--- a/templates/foreign/question_search.html
+++ b/templates/foreign/question_search.html
@@ -1,20 +1,14 @@
-{% extends "base.html" %}
+{% extends "foreign/foreign_base.html" %}
 
-{% block content %}
-<div class="d-flex justify-content-evenly ">
-    <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center" style="width:200px; height:150px;">
-        <ul>
-            <li><a href="{% url 'foreign:sister' univ.pk %}">자매 결연 대학</a></li>
-            <li><a href="{% url 'foreign:wiki' univ.pk %}">위키</a></li>
-            <li><a href="{% url 'foreign:question_list' univ.pk %}">QnA</a></li>
-            <li><a href="{% url 'foreign:review_list' univ.pk %}">파견교 후기 공유</a></li>
-        </ul>
-    </div>
+{% block contents %}
+<div style="width:750px;">
     <div>
         <div class="d-flex justify-content-between ">
             <div class="d-flex align-items-center ">
                 <h1>{{ univ.away_name }}</h1>
                 <span>QnA</span>
+                <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
+
             </div>
             <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}','{{ is_enrolled }}')"> 글쓰기 </button>
         </div>
