--- a/templates/domestic/question_search.html
+++ b/templates/domestic/question_search.html
@@ -48,7 +48,7 @@
                 <th>날짜</th>
             </tr>
         </table>
-        <p align='center'>검색 결과가 없습니다.</p>
+        <p align='center' class="m-4">검색 결과가 없습니다.</p>
         {% endif %}
         
         <div style="text-align:center">
