--- a/templates/domestic/comment_form.html
+++ b/templates/domestic/comment_form.html
@@ -21,7 +21,7 @@
         <div>
             <div class="d-flex justify-content-between">
                 <h4>{{ question.question_title }}</h4>
-                <p>작성자: {{ question.author.nickname }} 작성 시간: {{ question.created_at }}</p>
+                <p>작성자: {{ question.author.nickname }} 작성일: {{ question.created_at }}</p>
             </div>
             <p>
             {{ question.question_content }}
